--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start-dev": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js & node sharp.js",
+    "build": "webpack --config webpack.prod.js && npm run build-image",
     "test": "karma start",
     "lint": "eslint ./src",
     "serve": "http-server dist",
